# datapackvm

./: Cargo.toml
src/: cir.rs  gui.rs  interpreter.rs  lib.rs  parsed.rs
src/cir/: raw_text.rs
