[package]
name = "datapack_vm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_with = "1.9"
serde_json = "1.0"
lazy_static = "1.4"
datapack_common = { git = "https://github.com/SuperTails/datapack_common" }
#datapack_common = { path = "../datapack_common" }