[package]
name = "datapack_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "datapack_vm_cli"
path = "src/bin/cli/main.rs"

[[bin]]
name = "datapack_vm_gui"
path = "src/bin/gui/main.rs"

[lib]
name = "datapack_vm"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_with = "1.9"
serde_json = "1.0"
lazy_static = "1.4"
datapack_common = { git = "https://github.com/SuperTails/datapack_common" }
#datapack_common = { path = "../datapack_common" }

sdl2 = { version = "0.35.0", features = ["raw-window-handle"], optional = true }
pixels = { version = "0.9.0", optional = true }

[features]
gui = ["sdl2", "pixels"]